Code qui classe une image et identifie si c'est un bâtiment ou une vegetation (nouvelles fonctions et classes: histogramme, lecture des histogrammes dans les fichiers, calcul des distances et recherche du minimum)LbpApp

--- a/LbpApp/app/src/main/res/layout/activity_main.xml
+++ b/LbpApp/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,10 @@
         android:id="@+id/vue"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/TextViewFileReader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 </RelativeLayout>
